# poc-axum-multiple-crates

./: Cargo.toml  README.md  config.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: post.rs
crates/routes/: Cargo.toml
crates/routes/src/: error.rs  lib.rs  post.rs
crates/service/: Cargo.toml
crates/service/src/: error.rs  post.rs
src/: main.rs
