[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model.workspace = true
async-trait.workspace = true
mongodb.workspace = true
serde.workspace = true
futures.workspace = true
thiserror.workspace = true
